fix(appInstaller): use the PageCreator to preserve filename (#2581)
* Keep the original custom page filename
* Fix the PageService validation for apiExtension page types

Closes RUNTIME-1693